--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
 		<p id="name"> ~ Abraham Lincoln</p>
 	</div>
 
-	<script
-  src="https://code.jquery.com/jquery-3.2.1.js"
-  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-  crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="rqm.js"></script>
   <div><button id="tweet">Tweet it</button></div>
 </body>
